2004-02-11  Jordi Mallach  <jordi@sindominio.net>

	* src/pixmaps/gnome-mud.png, src/pixmaps/gnome-mud-tray-icon.png,
	src/svg/gnome-mud.svg: New gnome-mud icon, courtesy of Daniel Taylor,
	thanks!
	* src/pixmaps/Makefile.am: Add new icons, and install gnome-mud.png in
	the general pixmapsdir.
	* src/tray.c (tray_update_icon): Use the new tray icon.
	* src/init.c (window_menu_help_about): Use new app icon.
	* gnome-mud.desktop.in: Likewise.

	* src/python.c: Placate silly warning.

	* src/init.c (window_menu_help_about): Add Adam, Nuno and Daniel to
	the credits dialog.

	* configure.ac: Fix AM_INIT_AUTOMAKE.
	* autogen.sh: Require automake >= 1.6.

2004-01-27  Robin Ericsson  <lobbin@localhost.nu>

	* ROADMAP: Removed some entries we've fixed. Whohoo!! :)

	* src/net.c (make_connection): Compile-fix for lost part of Adams
	patch from yesterday.

2004-01-26  Jordi Mallach  <jordi@sindominio.net>

	* src/python.c (pyConnection_equals): New function, still unfinished.
	(pyConnection_isFocus): New, return true if the connection object
	is the current focused connection; false otherwise. Patch by
	Adam Luchjenbroers.
	* plugins/python/HPinfo.py: Updated version from Adam Luchjenbroers.

2004-01-23  Jordi Mallach  <jordi@sindominio.net>

	* plugins/python/HPinfo.py: Updated version from Adam Luchjenbroers.

2004-01-20  Jordi Mallach  <jordi@sindominio.net>

	* plugins/python/HPinfo.py: New plugin from Adam Luchjenbroers.
	* plugins/python/Makefile.am (EXTRA_DIST): Add HPinfo.py.
	* configure.in (AC_OUTPUT): Add plugins/python/Makefile.

	* NEWS: Updated.

2004-01-18  Jordi Mallach  <jordi@sindominio.net>

	* src/python.c (pymud_pygtk_add_widget): Add missing gtk_widget_show()
	call to fix PyGTK support. Patch from Adam Luchjenbroers.

2004-01-13  Robin Ericsson  <lobbin@localhost.nu>

	* src/gnome-mud.h (destroy): Changed proto.

	* src/init.c (destroy): Changed from void to gboolean, returning TRUE
	if we want to keep the main window.